--- a/scss/style.scss
+++ b/scss/style.scss
@@ -8,6 +8,9 @@ $theme-colors:(
 );
 *{
     font-family: 'Montserrat', sans-serif;
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
 }
 
 .hero{
@@ -29,6 +32,14 @@ nav{
     margin-right: auto;
     z-index: 100;
     background: hsla(219, 30%, 18%, 0.557);
+    @media screen and (max-width: 360px) {
+        width: 92% !important;
+        
+    }
+    @media screen and (max-width: 480px) {
+        height: 70px;
+        padding: 12px;
+    }
     @media screen and (min-width: 1300px){
         align-items: center;
         
@@ -51,9 +62,13 @@ nav{
         display: flex;
         flex-direction: row;
         justify-content: end;
+        margin-bottom: 0 !important;
         @media screen and (max-width: 480px){
             padding: 0;
             font-size: 0.9rem;
+        }
+        @media screen and (max-width: 361px) {
+            font-size: 0.7rem;
         }
         li{
             list-style-type: none;
@@ -86,6 +101,12 @@ nav{
         }
         h3{
             padding: 0 5px 0 5px;
+        }
+    }
+    @media screen and (max-width: 375px) {
+        width: 100%;
+        img{
+            width: 324px;
         }
     }
     h3{
